--- a/package.json
+++ b/package.json
@@ -60,6 +60,7 @@
     "lucide-react": "^0.436.0",
     "next": "^15.0.3",
     "next-themes": "^0.3.0",
+    "openai": "^5.5.1",
     "postgres": "^3.4.4",
     "posthog-js": "^1.201.0",
     "react": "^16.8 || ^17.0 || ^18.0 || ^19.0",
