open ai eval added

--- a/package.json
+++ b/package.json
@@ -15,7 +15,10 @@
     "analyze": "ANALYZE=true npm run build",
     "db:generate": "npx drizzle-kit generate",
     "db:migrate": "npx drizzle-kit migrate",
-    "prepare": "husky install"
+    "prepare": "husky install",
+    "test:grammar": "node scripts/run-grammar-test.js",
+    "test:grammar-direct": "tsx scripts/test-grammar-api.ts",
+    "test:verify": "node scripts/verify-setup.js"
   },
   "dependencies": {
     "@clerk/backend": "^1.20.1",
@@ -52,6 +55,7 @@
     "class-variance-authority": "^0.7.1",
     "clsx": "^2.1.1",
     "cmdk": "^1.0.0",
+    "csv-parse": "^5.6.0",
     "date-fns": "^3.6.0",
     "drizzle-orm": "^0.33.0",
     "embla-carousel-react": "^8.5.1",
@@ -73,6 +77,7 @@
     "stripe": "^16.9.0",
     "tailwind-merge": "^2.5.2",
     "tailwindcss-animate": "^1.0.7",
+    "tsx": "^4.20.3",
     "vaul": "^0.9.9",
     "zod": "^3.24.1"
   },
