first version of highlighting is working. there are some adjacent bugs popping up. but highlighting looks like it works.

--- a/.gitignore
+++ b/.gitignore
@@ -35,3 +35,9 @@ yarn-error.log*
 # typescript
 *.tsbuildinfo
 next-env.d.ts
+
+# repomix output files
+codebase.txt
+codebase.xml
+codebase.md
+repomix-output.*
